fixed fontawesome being overwritten, changed add activity to add note, fixed unreadable text color in favorites

--- a/src/css/components/labbook/activity.scss
+++ b/src/css/components/labbook/activity.scss
@@ -370,6 +370,7 @@
 
 
 .ActivityCard__badge{
+  font-family: FontAwesome !important;
   height: 60px;
   width: 60px;
   margin: 10px 20px 0 0;
@@ -382,6 +383,7 @@
   font-size: 40px !important;
 }
 .ActivityDetail__badge{
+  font-family: FontAwesome !important;
   height: 40px;
   width: 40px;
   margin: 0 20px 0 0;
